# vtop-auth-lite

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
core/: auth.py  exceptions.py  ocr.py  session.py
vtop_auth_lite/: __main__.py  auth.py  ocr.py  session.py
